The default demo now runs the original DarkThemeSample. The DarkThemeSampleMac has javadoc docs to demonstrate the Mac specific Blur effect