@@ -85,37 +85,6 @@
         <my.property>running.on.mac</my.property>
         <forceUploadingPainter>false</forceUploadingPainter>
       </properties>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-maven-plugin</artifactId>
-            <version>0.0.8</version>
-            <executions>
-              <execution>
-                <!-- Default configuration for running with: mvn clean javafx:run -->
-                <id>default-cli</id>
-                <configuration>
-                  <mainClass>com.pixelduke.samples.window.DarkThemeSampleMac</mainClass>
-                  <launcher>app</launcher>
-                  <jlinkZipName>app</jlinkZipName>
-                  <jlinkImageName>app</jlinkImageName>
-                  <noManPages>true</noManPages>
-                  <stripDebug>true</stripDebug>
-                  <noHeaderFiles>true</noHeaderFiles>
-                  <options>
-                    <!-- For getting the native window handle (WindowUtils.getNativeHandleForStage method) -->
-                    <option>--add-opens</option>
-                    <option>javafx.graphics/javafx.stage=com.pixelduke.fxthemes</option>
-                    <option>--add-exports</option>
-                    <option>javafx.graphics/com.sun.javafx.tk.quantum=com.pixelduke.fxthemes</option>
-                  </options>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
     </profile>
   </profiles>
 
@@ -139,7 +108,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.pixelduke.samples.window.DarkThemeSample</mainClass>
+              <mainClass>com.pixelduke.samples.fxthemes/com.pixelduke.samples.window.DarkThemeSample</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
@@ -154,8 +123,6 @@
                 <option>javafx.graphics/javafx.stage=com.pixelduke.fxthemes</option>
                 <option>--add-exports</option>
                 <option>javafx.graphics/com.sun.javafx.tk.quantum=com.pixelduke.fxthemes</option>
-                <option>--add-exports</option>
-                <option>javafx.graphics/com.sun.glass.ui=com.pixelduke.fxthemes</option>
               </options>
             </configuration>
           </execution>
